# PalmettoBUG

./: .about.toml  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.txt  LICENSE.txt  Other_License_Details.txt  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
crates/_central/: Cargo.toml
crates/_central/src/: lib.rs
crates/rust_masks/: Cargo.toml
crates/rust_masks/src/: lib.rs
crates/rust_spaceanova/: Cargo.toml
crates/rust_spaceanova/src/: lib.rs
crates/rust_sup_classifier/: Cargo.toml
crates/rust_sup_classifier/src/: lib.rs
docs/slides/: HackingPalmettoBUG.odp
docs/source/: AdvancedPalmettoBUG.rst  Citing&Acknowledgements.rst  FAQ.rst  Glossary.rst  ImageProcessing.rst  LoadingData.rst  MakingPixelClassifier.rst  SingleCellAnalysis.rst  SpatialAnalysis.rst  TODO.txt  TheInterface.rst  UsingPixelClassifier.rst  WelcometoPalmettoBUG.rst  bead_norm.rst  conf.py  index.rst  requirements.txt
docs/source/notebooks/: LaunchMainGUIs.ipynb  index.rst
docs/source/notebooks/CoreImagingPipeline/: ImageProcessing.ipynb  MoreImageProcessingOptions.ipynb  SingleCellAnalysis.ipynb  index.rst
docs/source/notebooks/EntrypointAlternatives/: AnalysisFromCSV.ipynb  AnalysisFromFCS.ipynb  index.rst
docs/source/notebooks/PixelClassifiers/: SupervisedClassifier.ipynb  UnsupervisedClassifier.ipynb  WholeClassAnalysis.ipynb  index.rst
docs/source/odt_docs/: AdvancedPalmettoBUG.odt  Citing&Acknowledgements.odt  FAQ.odt  Glossary.odt  MakingPixelClassifier.odt  TheInterface.odt  UsingPixelClassifier.odt  WelcometoPalmettoBUG.odt
docs/source/odt_docs/MainPipeline_docs/: ImageProcessing.odt  LoadingData.odt  SpatialAnalysis.odt
docs/source/odt_docs/image_development_slides/: CreatePixelClassification.odp  GUI_details_dev.odp  UsePixelClassification.odp  advanced_dev.odp  image_processing_dev.odp  loading_dev.odp  spatial_dev.odp
docs/source/word_docs/: AdvancedPalmettoBUG.docx  Citing&Acknowledgements.docx  FAQ.docx  Glossary.docx  MakingPixelClassifier.docx  TheInterface.docx  UsingPixelClassifier.docx  WelcometoPalmettoBUG.docx
docs/source/word_docs/MainPipelineDocs/: ImageProcessing.docx  LoadingData.docx  SpatialAnalysis.docx
environments/: linux_runner_pip_freeze3.10.txt  macos_runner_pip_freeze3.10.txt  requirements_3.10.txt  requirements_3_10.txt  windows_local_conda_list_GPU3.10.txt  windows_local_pip_freeze3.10.txt  windows_local_pip_freeze3.9.txt  windows_pip_freeze3.10.txt
for_AI/: SKILL.md
licenses/: licenses.hbs
notebooks/: LaunchMainGUIs.ipynb  MIBI_test.ipynb  TestPancreaticPaper.ipynb
notebooks/CoreImagingPipeline/: ImageProcessing.ipynb  MoreImageProcessingOptions.ipynb  SingleCellAnalysis.ipynb  SpatialAnalysis.ipynb  index.rst
notebooks/EntrypointAlternatives/: AnalysisFromCSV.ipynb  AnalysisFromFCS.ipynb  BeadNormalizer.ipynb  TextFilesToTIFFs.ipynb
notebooks/PixelClassifiers/: SupervisedClassifier.ipynb  UnsupervisedClassifier.ipynb  WholeClassAnalysis.ipynb
notebooks/miscellaneous/: MIBI_test.ipynb
notebooks/replicatePapers/Damond-etal-Bodenmiller-2019-T1DPancreas/: TestPancreaticPaper.ipynb
notebooks/replicatePapers/Damond-etal-Bodenmiller-2019-T1DPancreas/IsletPxClassifier/: Classifier_1.json  Classifier_1_details.json  biological_labels.csv
notebooks/replicatePapers/Damond-etal-Bodenmiller-2019-T1DPancreas/IsletPxClassifier/training_labels/: E02_a0_full.tiff
notebooks/replicatePapers/Nowicka-eral-Robinson-2027-CATALYST/: TestCATALYSTpaper.ipynb
palmettobug/: Executable.py  __init__.py  _rust_k.py
palmettobug/Analysis_functions/: Analysis.py  SpatialANOVA.py  SpatialAnalysis.py  WholeClassAnalysis.py
palmettobug/Analysis_widgets/: Analysis_GUI.py  Spatial_GUI.py
palmettobug/Entrypoint/: app_and_entry.py  bead_norm.py
palmettobug/ImageProcessing/: ImageAnalysisClass.py  ImageAnalysisWidgets.py
palmettobug/Pixel_Classification/: Classifiers.py  Classifiers_GUI.py  alt_Classifiers.py  alt_Classifiers_GUI.py  use_classifiers.py  use_classifiers_GUI.py
palmettobug/Utils/: sharedClasses.py
palmettobug/_vendor/: flowsom.py  pyometiff.py  qnorm.py  sigfig.py  steinbock.py
palmettobug/crates/_native/: Cargo.toml
palmettobug/crates/_native/src/: lib.rs
tests/: __init__.py  dont_test_alt_classifiers.py  dont_test_px_class.py  old_test_px_class.py  old_test_pytest_main.py  test_GUI.py  test_alt_classifiers.py  test_analysis.py  test_fetch.py  test_img_proc.py  test_px_class.py  test_pytest_all.py  test_pytest_main.py  test_spatial.py  test_x_last_GUI.py
tests/manual_test_scripts/: analysis.py  fetch.py  img_proc.py  make_px_classifier.py  spatial.py
tests/set_aside/: test_alt_classifiers.py
