[tool.poetry]
name = "palmettobug"
version = "0.1.4"
description = "A GUI for (imaging) mass cyometry analysis predominantly based on the popular Steinbock and CATALYST image processing and data analysis packages and written in customtkinter."
authors = ["Ben Caiello <caiello@musc.edu>"]
license = "GPL-3"
readme = "README.md"
repository = "https://github.com/BenCaiello/PalmettoBUG"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
numpy = "1.*"
pandas = "2.*"
dask = "<2025.1.0"
matplotlib = ">=3.0.0"
seaborn = "*"
customtkinter = ">=5.2.2"
napari = "*" 
PySide6 = "<6.5" ## <6.5 matches Napari's experimental pyside6 requirement -- test change for MacOS / Apple Silicon users
#PySide2 = "*"
#qtconsole = "*"
#QtPy = "*"
lxml = "*"
# readfcs = "1.1.8"
tifffile = ">=2024.2.12" 
opencv-python-headless = ">=4.9.0.80"
scikit-image = "*"
scikit-learn = "*"
scipy = "*" 
scikit-fda = "*"
statsmodels = "*"
anndata = "*"
scanpy = "*"
squidpy = ">=1.6.0"
igraph = "*"
loguru = "*"
mudata = "*"
leidenalg = "*"
sympy = "<=1.13.1"
sortedcontainers = "*"
defusedxml = "*"
# isosegdenoise = "*"

[tool.poetry.group.other]
optional = true

[tool.poetry.group.other.dependencies]
svg-stack = "*"
navis = "*"

[tool.poetry.scripts]
palmettobug = 'palmettobug.Executable:run_GUI'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
