[project]
name = "palmettobug"
version = "0.2.8"
description = "A GUI for (imaging) mass cyometry analysis predominantly based on the popular Steinbock and CATALYST image processing and data analysis packages and written in customtkinter."
authors = [
    {name = "Ben Caiello", email = "<caiello@musc.edu>"},
            ]
license = {text = "GPL-3.0"}
readme = "README.md"
repository = "https://github.com/BenCaiello/PalmettoBUG"
requires-python = ">=3.10"
dependencies = [
            "numpy <2.0.0, >=1.26.4",    ## numpy<2.0.0 is not strictly necessary for pbug, but helps reduce errors for the sister package (iSD) if co-installed in the same python environment
            "pandas>=2.2",
            "matplotlib>=3.0.0",
            "seaborn>=0.13.2",
            "customtkinter>=5.2.2",
            "napari>=0.5.6" ,
            "PySide6<6.5",             ## <6.5 matches Napari's experimental pyside6 requirement -- test change for MacOS / Apple Silicon users
            "lxml>=5.3.2",
            "tifffile>=2024.2.12", 
            "opencv-python-headless>=4.9.0.80",
            "scikit-image>=0.25.2",
            "scikit-learn>=1.5.2",
            "scipy>=1.15.2",
            "scikit-fda>=0.10.1",
            "statsmodels>=0.14.4",
            "anndata>=0.11.4",
            "scanpy>=1.11.1",
            "squidpy>=1.6.5",
            "igraph>=0.11.8",
            "loguru>=0.7.3",
            "mudata>=0.3.1",
            "leidenalg>=0.10.2",
            "sortedcontainers>=2.4.0",
            "defusedxml>=0.7.1",
            "flowsom>=0.2.1",
            "dask<2025.1.0, >=2024.11.2",       ## needed until scverse's spatialdata package (and so squidpy) upgrades to no longer use the unsupported legacy dask api

            ## following added to help reduce "resolution too deep" errors from pip (transferred from strict dependency version):
            "fsspec>=2025.3.2",
            "pyogrio>=0.10.0",
            "distributed>=2024.11.2",
            "ome-zarr>=0.10.3",
            "xarray>=2025.6.1",
            "xarray-dataclasses>=1.9.1",
            "aiohttp>=3.11.16",
            "requests>=2.32.3",
            "sympy>=1.13.1",
            "toolz>=1.0.0",
            "vispy>=0.14.3",
        ]

[project.optional-dependencies]
instanseg = ["instanseg-torch"]
deprecated_extras = ["svg-stack", "navis"]

[tool.ruff]
extend-exclude = ["Assets", ".tiff", ".png", ".jpg", ".ico", ".txt", ".json"]

[tool.poetry.scripts]
palmettobug = 'palmettobug.Executable:run_GUI'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
