## file edited from rust_sup_classifier Cargo.toml file

[package]
name = "rust_masks"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["PalmettoBUG contributors"]

[lib]
name = "rust_masks"

[dependencies]
image = "0.24.9"
imageproc = "0.23.0"

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3