## file edited from rust_sup_classifier Cargo.toml file

[package]
name = "rust_masks"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["PalmettoBUG contributors"]

[lib]
name = "rust_masks"

[dependencies]
image = "0.26"
imageproc = "0.23.0"

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3