## file edited from rust_spaceanova Cargo.toml file

[package]
name = "rust_sup_classifier"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["PalmettoBUG contributors"]

[lib]
name = "rust_sup_classifier"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[profile.release]
codegen-units = 1
lto = 'thin'
opt-level = 3